chapter_9/9.2/README.md
## Компоновщик

— Объединяет объекты в древовидные структуры для представления иерархии часть/целое

___
🎶
-  Позволяет клиенту выполнять однородные операции с объектами и их совокупностями

#### Принципы проектирования:
##### 📍 Аспекты приложения, которые могут меняться должны быть отделены от тех, которые всегда остаются постоянными
    - Чтобы впоследствии их можно было изменять или расширять без воздействия на постоянные составляющие

##### 📍 Программирование на уровне интерфейсов, а не реализации
    - Отсутствует заивисимость от реализации основного класса
    - Возможность использовать поведение в объектах других типов
    - Возможность добавлять новые аспекты поведения без последствий для классов Duck, использующих существующее поведение

##### 📍 Предпочтение композиции перед наследованием:
    - Система обладает большей гибкостью
    - Возможность не только инкапсулировать семейства алгоритмов, но и изменять поведение во время исполнения

##### 📍 Слабая связанность объектов

    - На базе слабосвязанных архитектур строятся гибкие системы, хорошо адаптируемые к изменениям из-за минимальных зависимостей


##### 📍 Принцип открытости/закрытости

    - Классы должны быть открыты для расширения, но закрыты для модификации.
    - Классы, которые легко расширить новым поведением без изменения существующего кода —
      архитектура, устойчивая к изменениям и достаточно гибкая для поддержки новой функциональности
      в соответствии с изменившимися требованиями

##### 📍 Код должен зависеть от абстракций, а не от конкретных классов

##### 📍 Взаимодействуйте только с "друзьями"
    - При проектировании системы следует обращать внимание на количество классов, с которыми 
    взаимодействуем каждый объект, и каким образом это взаиомдействие организовано
    - Из любого метода класса должны вызываться только методы, принадлежащие:
        1. самому объекту
        2. объектам, переданным в параметрах
        3. объекту, созданному внутри метода
        4. любым компонентам объекта

##### 📍 Не вызывайте нас - мы вас сами вызовем
    - Решения должны приниматься модулями высокого уровня, которые знают, когда и как обращаться
    с вызовами к модулям низкого уровня

##### 📍 Класс должен иметь только одну обязанность
    - Каждая обязанность - область потенциальных изменений
    - Принцип связан с понятием «связности» 🙃 (высокая связность = класс спроектирован
    для выполнения группы взаимосвязанных функций)


   


     